<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/factView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="11"
            android:clipToPadding="false"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/shareBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:background="@null"
                    android:paddingEnd="20dp"
                    android:paddingStart="15dp"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    app:srcCompat="?android:attr/actionModeShareDrawable" />

                <TextView
                    android:id="@+id/category"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_vertical"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/backBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="start"
                    android:background="@null"
                    android:paddingLeft="15dp"
                    android:paddingRight="10dp"
                    app:srcCompat="@drawable/arrow_back" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/fact_bcg1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/thisFact"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ScrollView
                    android:id="@+id/wholeFact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/factBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="30dp"
                        android:layout_marginStart="30dp"

                        android:gravity="center_vertical|center_horizontal|center"
                        android:text="Loading..."
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent"
                        android:textSize="30sp"
                        app:layout_constraintBottom_toTopOf="@+id/favouriteFact"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

                </ScrollView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/favouriteFact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:paddingBottom="12dp"
                        android:scaleX="1.5"
                        android:scaleY="1.5"
                        app:layout_constraintBottom_toTopOf="@+id/getFact"
                        app:layout_constraintEnd_toStartOf="@+id/voteDownBtn"
                        app:layout_constraintStart_toEndOf="@+id/voteUpBtn"
                        app:srcCompat="@drawable/heart_icon" />

                    <Button
                        android:id="@+id/voteDownBtn"
                        android:layout_width="0dp"
                        android:layout_height="56dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginEnd="35dp"
                        android:layout_marginStart="20dp"
                        android:backgroundTint="@color/colorAccent"
                        android:elevation="3dp"
                        android:text="Vote -"
                        android:textSize="16sp"
                        android:visibility="visible"
                        app:layout_constraintBottom_toTopOf="@+id/getFact"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/favouriteFact" />

                    <Button
                        android:id="@+id/getFact"
                        android:layout_width="0dp"
                        android:layout_height="56dp"
                        android:layout_marginBottom="30dp"
                        android:layout_marginEnd="35dp"
                        android:layout_marginStart="35dp"
                        android:backgroundTint="@color/white"
                        android:elevation="5dp"
                        android:text="Get a Fact"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <Button
                        android:id="@+id/voteUpBtn"
                        android:layout_width="0dp"
                        android:layout_height="56dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginStart="35dp"
                        android:backgroundTint="@color/colorAccent"
                        android:elevation="3dp"
                        android:text="Vote +"
                        android:textSize="16sp"
                        android:visibility="visible"
                        app:layout_constraintBottom_toTopOf="@+id/getFact"
                        app:layout_constraintEnd_toStartOf="@+id/favouriteFact"
                        app:layout_constraintStart_toStartOf="parent" />
                </android.support.constraint.ConstraintLayout>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>