...
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="20dp">


            <TextView
                android:id="@+id/skipLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/skip"
                android:textSize="24sp" />
...
